trunk/Archive2/57/bb5ebf869ee820/output
In file included from main.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/unordered_map:47:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/hashtable.h:194:32: error: no type named 'pointer' in 'my_allocator<std::pair<const int, double> >'
      typedef typename _Alloc::pointer                pointer;
              ~~~~~~~~~~~~~~~~~^~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unordered_map.h:100:18: note: in instantiation of template class 'std::_Hashtable<int, std::pair<const int, double>, my_allocator<std::pair<const int, double> >, std::__detail::_Select1st, std::equal_to<int>, std::hash<int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >' requested here
      _Hashtable _M_h;
                 ^
main.cpp:17:14: note: in instantiation of template class 'std::unordered_map<int, double, std::hash<int>, std::equal_to<int>, my_allocator<std::pair<const int, double> > >' requested here
    map_type m { { 1, 1. } , { 2, 2. } };
             ^
In file included from main.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/unordered_map:47:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/hashtable.h:195:32: error: no type named 'const_pointer' in 'my_allocator<std::pair<const int, double> >'
      typedef typename _Alloc::const_pointer          const_pointer;
              ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/hashtable.h:196:32: error: no type named 'reference' in 'my_allocator<std::pair<const int, double> >'
      typedef typename _Alloc::reference              reference;
              ~~~~~~~~~~~~~~~~~^~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/hashtable.h:197:32: error: no type named 'const_reference' in 'my_allocator<std::pair<const int, double> >'
      typedef typename _Alloc::const_reference        const_reference;
              ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/hashtable.h:316:41: error: 'rebind' following the 'template' keyword does not refer to a template
      typedef typename _Alloc::template rebind<__node_type>::other
                                        ^~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/hashtable.h:318:41: error: 'rebind' following the 'template' keyword does not refer to a template
      typedef typename _Alloc::template rebind<__bucket_type>::other
                                        ^~~~~~
In file included from main.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/unordered_map:47:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/hashtable.h:35:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/hashtable_policy.h:1652:35: error: base specifier must name a class
    struct _Before_begin : public _NodeAlloc
                           ~~~~~~~^~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/hashtable.h:325:23: note: in instantiation of template class 'std::__detail::_Before_begin<int>' requested here
      __before_begin            _M_bbegin;
                                ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unordered_map.h:100:18: note: in instantiation of template class 'std::_Hashtable<int, std::pair<const int, double>, my_allocator<std::pair<const int, double> >, std::__detail::_Select1st, std::equal_to<int>, std::hash<int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >' requested here
      _Hashtable _M_h;
                 ^
main.cpp:17:14: note: in instantiation of template class 'std::unordered_map<int, double, std::hash<int>, std::equal_to<int>, my_allocator<std::pair<const int, double> > >' requested here
    map_type m { { 1, 1. } , { 2, 2. } };
             ^
In file included from main.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/unordered_map:48:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unordered_map.h:116:40: error: no type named 'pointer' in 'my_allocator<std::pair<const int, double> >'
      typedef typename allocator_type::pointer          pointer;
              ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
main.cpp:17:14: note: in instantiation of template class 'std::unordered_map<int, double, std::hash<int>, std::equal_to<int>, my_allocator<std::pair<const int, double> > >' requested here
    map_type m { { 1, 1. } , { 2, 2. } };
             ^
In file included from main.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/unordered_map:48:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unordered_map.h:117:40: error: no type named 'const_pointer' in 'my_allocator<std::pair<const int, double> >'
      typedef typename allocator_type::const_pointer    const_pointer;
              ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unordered_map.h:118:40: error: no type named 'reference' in 'my_allocator<std::pair<const int, double> >'
      typedef typename allocator_type::reference        reference;
              ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unordered_map.h:119:40: error: no type named 'const_reference' in 'my_allocator<std::pair<const int, double> >'
      typedef typename allocator_type::const_reference  const_reference;
              ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
11 errors generated.
